Improved styles and alignment. Tweaked descriptions

--- a/_posts/2013-09-08-get-up.md
+++ b/_posts/2013-09-08-get-up.md
@@ -1,6 +1,6 @@
 ---
 layout: work_entry
-title: Get Up
+title: Get Up and Keep It Moving
 image: /static/images/work/07-get-up.png
 category: work
 ---
