--- a/_posts/2013-09-08-lol-wht.md
+++ b/_posts/2013-09-08-lol-wht.md
@@ -1,11 +1,12 @@
 ---
 layout: work_entry
-title: LOL WHT?!
+title: LOL WHT?
 image: /static/images/work/05-lol-wht.png
 category: work
 ---
 
 Are you having hard time figuring out what netizens (internet citizens) say now in cyberspace? Do you want to stay updated on the latest trends in text speak? Well look no further, LOL WHT? (Laugh Out Loud...What?) is exactly what you need.
+
 This publication gauges people’s knowledge of internet speak and slangs. Not only will this serve as a dictionary but it also comes with simple delightful illustrations showing real life conversations. Emoticons (Emotional Icons) are added to give the characters subtle visual intonations that are left by the absence of the tone of voice and facial expression.
 
 ![placeholder](/static/images/work/lol-wht/lol-wht-1.jpg "")
