--- a/_posts/2013-09-08-get-up.md
+++ b/_posts/2013-09-08-get-up.md
@@ -1,7 +1,7 @@
 ---
 layout: work_entry
 title: Get Up and Keep It Moving
-image: /static/images/work/07-get-up.png
+css-class: get-up
 category: work
 ---
 
