--- a/_posts/2013-09-08-lol-wht.md
+++ b/_posts/2013-09-08-lol-wht.md
@@ -1,7 +1,7 @@
 ---
 layout: work_entry
 title: LOL WHT?
-image: /static/images/work/05-lol-wht.png
+css-class: lol-wht
 category: work
 ---
 
@@ -13,3 +13,8 @@ This publication gauges people’s knowledge of internet speak and slangs. Not o
 ![placeholder](/static/images/work/lol-wht/lol-wht-2.jpg "")
 ![placeholder](/static/images/work/lol-wht/lol-wht-3.jpg "")
 ![placeholder](/static/images/work/lol-wht/lol-wht-4.jpg "")
+![placeholder](/static/images/work/lol-wht/lol-wht-5.jpg "")
+![placeholder](/static/images/work/lol-wht/lol-wht-6.jpg "")
+![placeholder](/static/images/work/lol-wht/lol-wht-7.jpg "")
+![placeholder](/static/images/work/lol-wht/lol-wht-8.jpg "")
+![placeholder](/static/images/work/lol-wht/lol-wht-9.jpg "")
