Aligned hovers. Modified some work images

--- a/_posts/2013-09-08-lol-wht.md
+++ b/_posts/2013-09-08-lol-wht.md
@@ -13,8 +13,5 @@ This publication gauges people’s knowledge of internet speak and slangs. Not o
 ![placeholder](/static/images/work/lol-wht/lol-wht-2.jpg "")
 ![placeholder](/static/images/work/lol-wht/lol-wht-3.jpg "")
 ![placeholder](/static/images/work/lol-wht/lol-wht-4.jpg "")
-![placeholder](/static/images/work/lol-wht/lol-wht-5.jpg "")
-![placeholder](/static/images/work/lol-wht/lol-wht-6.jpg "")
-![placeholder](/static/images/work/lol-wht/lol-wht-7.jpg "")
-![placeholder](/static/images/work/lol-wht/lol-wht-8.jpg "")
-![placeholder](/static/images/work/lol-wht/lol-wht-9.jpg "")
+![placeholder](/static/images/work/lol-wht/lol-wht-5.png "")
+
